# duorou

./: .gitignore  .gitmodules  ARCHITECTURE_REFACTORING_SUMMARY.md  CMakeLists.txt  CMakePresets.json  debug_gguf.py  dump.mcdb  llama_model_loader.cpp  llama_model_loader.h  sales_data.csv  test_bpe_simple.cpp  test_gtk  test_gtk.cpp  test_model_id_fix.cpp  test_qwen25vl.cpp  test_screen_capture.cpp  test_tokenizer.cpp  test_vocabulary_fix.cpp  verify_fix.py
doc/: development_plan.md  ex.md  llama_cpp_analysis.md  model_download_archiving_index.md  sprint.md  stable_diffusion_cpp_analysis.md
docs/: GGML_ATTENTION_STATUS.md  GGML_ATTENTION_USAGE.md  STREAMING_FIXES.md  bugs.md  chart_support.md  debug.md  debug1.md  debug2.md  debug3.md  development_plan.md  file_processing_plan.md  ggml_llama_cpp_tutorial.md  ggml_llama_cpp_tutorial_zh.md  new_feat.md  ollama_architecture_analysis.md  ollama_qwen25vl_分析文档.md  ollama_剩余问题与改进建议.md  qwen2.5vl_graph.md  qwen25vl_token_mapping_fix_plan.md  qwen_model_doc.md  read_project.md  建议.md  测试.md
examples/: debug_tokens.py  py_test_token.py  test_qwen_py.py
src/: CMakeLists_integration_test.txt  main.cpp  test_module_integration.cpp
src/api/: api_server.cpp  api_server.h
src/core/: application.cpp  application.h  config_manager.cpp  config_manager.h  excel_parser.cpp  excel_parser.h  file_parser.cpp  file_parser.h  hf_tokenizer.cpp  hf_tokenizer.h  image_generator.cpp  image_generator.h  logger.cpp  logger.h  model_downloader.cpp  model_downloader.h  model_manager.cpp  model_manager.h  model_path_manager.cpp  model_path_manager.h  model_switch_task.cpp  model_switch_task.h  modelfile_parser.cpp  modelfile_parser.h  mtmd_demo.cpp  mtmd_demo.h  ollama_model_loader.cpp  ollama_model_loader.h  pdf_parser.cpp  pdf_parser.h  qwen_safetensors_engine.cpp  qwen_safetensors_engine.cpp.backup  qwen_safetensors_engine.h  qwen_safetensors_engine.h.backup  qwen_safetensors_engine_mmap.cpp  qwen_safetensors_engine_mmap.h  resource_manager.cpp  resource_manager.h  safetensors_parser.cpp  safetensors_parser.h  (+9 more)
src/extensions/: CMakeLists.txt
src/extensions/ggml/: ggml-backend.h  ggml_extend.hpp  llama.h  rng.hpp
src/extensions/llama_cpp/: CMakeLists.txt  arch_mapping.cpp  arch_mapping.h  attention_handler.cpp  attention_handler.h  compatibility_checker.cpp  compatibility_checker.h  ggml_incremental_extension.cpp  ggml_incremental_extension.h  gguf_modifier.cpp  gguf_modifier.h  gguf_wrapper.cpp  gguf_wrapper.h  integration_test.cpp  model_config_manager.cpp  model_config_manager.h  model_loader_wrapper.cpp  model_loader_wrapper.h  vision_model_handler.cpp  vision_model_handler.h
src/extensions/ollama/: CMakeLists.txt  bpe_processor.h  compatibility_checker.cpp  compatibility_checker.h  config_manager.cpp  config_manager.h  gguf_modifier.cpp  gguf_modifier.h  gguf_parser.cpp  gguf_parser.h  inference_engine.cpp  inference_engine.h  integration_test_qwen25vl.cpp  llama_model_loader.cpp  llama_model_loader.h  llama_params_converter.cpp  llama_params_converter.h  llama_text_processor.cpp  llama_text_processor.h  llama_vocab_adapter.cpp  llama_vocab_adapter.h  model_path_manager.cpp  model_path_manager.h  modelfile_parser.cpp  modelfile_parser.h  ollama_model_loader.cpp  ollama_model_loader.h  ollama_model_manager.cpp  ollama_model_manager.h  ollama_path_resolver.cpp  ollama_path_resolver.h  ollama_text_generator.cpp  ollama_text_generator.h  qwen25vl_inference_engine.cpp  qwen25vl_inference_engine.cpp.backup  qwen25vl_inference_engine.h  qwen25vl_modular_engine.cpp  qwen25vl_modular_engine.h  qwen25vl_refactored_engine.cpp  qwen25vl_refactored_engine.h  (+10 more)
src/extensions/ollama/algorithms/: README_mmap.md  algorithm_factory.h  base_algorithm.h  bpe_processor.cpp  bpe_processor.h  fast_attention.h  feed_forward.h  ggml_attention.cpp  ggml_attention.h  ggml_feed_forward.cpp  ggml_feed_forward.h  matrix_mmap.cpp  matrix_mmap.h  matrix_operations.h  multi_head_attention.h  rope_processor.h  test_matrix_mmap.cpp
src/extensions/ollama/ggml/: ggml_wrapper.h
src/extensions/ollama/gguf/: gguf_wrapper.cpp  gguf_wrapper.h
src/gui/: chat_session.cpp  chat_session.h  chat_session_manager.cpp  chat_session_manager.h  chat_view.cpp  chat_view.h  enhanced_video_capture_window.cpp  enhanced_video_capture_window.h  image_view.cpp  image_view.h  main_window.cpp  main_window.h  markdown_view.cpp  markdown_view.h  seo_page_browser_web_window_view_icon.icns  (+11 more)
src/kvcache/: CMakeLists.txt  cache.cpp  cache.h  causal.cpp  causal.h  encoder.cpp  encoder.h  wrapper.cpp  wrapper.h
src/ml/: CMakeLists.txt  context.cpp  context.h  ggml_qwen2vl_test.cpp  tensor.cpp  tensor.h  test_ml.cpp
src/ml/backend/: backend.cpp  backend.h  cpu_backend.cpp  cpu_backend.h  ggml_backend.cpp  ggml_backend.h
src/ml/nn/: activation.cpp  activation.h  attention.cpp  attention.h  layer_norm.cpp  layer_norm.h  linear.cpp  linear.h
src/model/: CMakeLists.txt  README_QWEN.md  base_model.h  byte_pair_encoding.cpp  byte_pair_encoding.h  integrated_model_example.cpp  integrated_model_example.h  model.cpp  model.h  qwen25vl_model.cpp  qwen25vl_model.h  qwen_example.cpp  qwen_image_processor.cpp  qwen_image_processor.h  qwen_multimodal_model.cpp  qwen_multimodal_model.h  qwen_text_model.cpp  qwen_text_model.h  qwen_vision_model.cpp  qwen_vision_model.h  sentence_piece.cpp  sentence_piece.h  simple_integration_demo.cpp  simple_integration_demo.h  test_integration.cpp  test_model.cpp  text_processor.h  tokenizer_cli.cpp  tokenizer_factory.cpp  tokenizer_factory.h  tokenizer_golden_test.cpp  vocabulary.cpp  vocabulary.h
src/model/golden_tokenizer/: decode.tsv  encode.tsv  vocab.txt
src/utils/: CMakeLists.txt  object_store.cpp  object_store.h  string_utils.cpp  string_utils.h
test/: test_text_generation.cpp  test_tokenizer.cpp
test_conversational_model/: config.json  model.safetensors.index.json  vocab.json
tests/: CMakeLists.txt  test_minimemory  test_minimemory.cpp  test_model_downloader.cpp  test_ollama_model_loader.cpp  test_workflow_engine_core.cpp  test_workflow_engine_enhanced.cpp
(+25 files in other folders)
